Trying to fix a weird text wrap thing

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,16 @@ h1 {
     bottom: -40px;
 }
 
+h2 {
+    display: flex;
+    justify-content: center;
+}
+
+h3 {
+    display: flex;
+    justify-content: center;
+}
+
 img {
     padding-bottom: 20px;
 }
